k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: lms

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
      - name: mongodb

        image: mongo:7

        ports:
        - containerPort: 27017

        volumeMounts:
        - mountPath: /data/db
          name: mongo-storage

      volumes:
      - name: mongo-storage
        emptyDir: {}
