k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: lms

spec:
  selector:
    app: mongodb

  ports:
  - port: 27017
    targetPort: 27017
